--- a/client/tcsim.html
+++ b/client/tcsim.html
@@ -26,7 +26,31 @@
 	 <li>H = height of coil in inches</li>
 	 </ol>
 	</p>
-  {{/mathjax}}
-</body>
 
+	<p>
+	Energy Storage Mechanisms
+	 $$J = \frac{V^2 C}{2}$$
+	 $$J = \frac{I^2 L}{2}$$
+	</p>
+  {{/mathjax}}
+
+  Lets build a tesla coil!
+
+  {{> stepOne}}
+<!--   {{> stepTwo}}
+  {{> stepThree}}
+  {{> stepFour}}
+  {{> saveCoil}}
+  {{> simulator}}
+ --></body>
+
+<template name="stepOne">
+  Lets start with the approximate size of the secondary coil which you wish to build:
+	<input type="text" name="height"> cm
+  Reccomend an aspect ration (H/R) from 3-7
+
+  Now we can select the coil 
+
+
+</template>
 
